api: stream file uploads using request.stream
* After the findings in
  https://github.com/diegodelemos/client-server-flask-big-file-uploads
  it is clear we have to move from multipart uploads to stream uploads
  using `request.stream` directly (closes reanahub/reana-clien#302).
